WC: updated wild player plugin (added saa1099 support)

--- a/pentevo/soft/WC/exe/WC/wc.ini
+++ b/pentevo/soft/WC/exe/WC/wc.ini
@@ -9,7 +9,7 @@ TXTMD=1; 0=80x25, 1=80x30, 2=90x36 text mode
 MOUNTER .WMF
 FILE_CR .WMF
 ROM_PROG.WMF
-WP333_6 .WMF
+WPLAYER .WMF
 GSPLAYER.WMF
 VIDEO_PL.WMF
 BMPV    .WMF
