--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -1,4 +1,4 @@
-[*] unreal speccy configuration file [*]
+[*] unreal speccy configuration file
 
 UNREAL=0.37.9   ; make sure you don't have old INI version
 
@@ -359,6 +359,7 @@ CovoxFB=1       ; enable/disable pentagon covox
 CovoxDD=1       ; enable/disable scorpion covox
 
 Saa1099=0       ; enable/disable saa1099
+MoonSound=1	; enable/disable moonsound
 
 ; max sound volume is 8192. set to 0 to completely disable sound device
 BeeperVol=8192     ; most popular sound device
@@ -491,6 +492,9 @@ CD1=1            ; 1 if image is cdrom
 [ROM]
 ; general sound firmware
 GS=rom\bootgs.rom
+; moonsound wavetable
+MOONSOUND=rom\YRW801-M - Yamaha - 1993.rom
+
 
 ; 64/128/512/1024K ROM images (single file)
 
