--- a/pentevo/unreal/Unreal/Unreal.vcxproj
+++ b/pentevo/unreal/Unreal/Unreal.vcxproj
@@ -120,6 +120,12 @@
     <ClCompile Include="sndrender.cpp" />
     <ClCompile Include="snd_bass.cpp" />
     <ClCompile Include="sound.cpp" />
+    <ClCompile Include="sound\dev_moonsound.cpp" />
+    <ClCompile Include="sound\ymf262.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Use</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Use</PrecompiledHeader>
+    </ClCompile>
+    <ClCompile Include="sound\ymf278.cpp" />
     <ClCompile Include="std.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -222,6 +228,9 @@
     <ClInclude Include="sndrender.h" />
     <ClInclude Include="snd_bass.h" />
     <ClInclude Include="sound.h" />
+    <ClInclude Include="sound\dev_moonsound.h" />
+    <ClInclude Include="sound\ymf262.h" />
+    <ClInclude Include="sound\ymf278.h" />
     <ClInclude Include="std.h" />
     <ClInclude Include="sysdefs.h" />
     <ClInclude Include="tables.h" />
