Unreal: ZXM-Phoenix support added, closes #25

--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -525,6 +525,9 @@ TSL=rom\zxevo.rom
 ; LSY256
 LSY=rom\lsy256.rom
 
+; ZXM-Phoenix
+PHOENIX=rom\ZXM-Phoenix_bios.bin
+
 ; you can create own 64K-ROMSET, naming ini section [ROM.my_own_set]
 ; for empty ROMSET, single-file large ROM used (accordingly to memory model)
 ROMSET=
