BIOS: added IDE smuc driver, IDE nemo driver updated (improved initialisation algorithm)
nemo driver modified to working with original contoller,  which can be
plugged into ZX-BUS slot (DOS\ signal must be disabled!)

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,8 @@ pentevo/rom/src/866_code.fnt.hst
 pentevo/rom/src/866_code.asm
 pentevo/rom/bin/TS-BIOS.$C
 pentevo/fpga/current/quartus/serv_req_info.txt
+
+*.r01
+*.inc
+pentevo/rom/src/obj/ts-bios.html
+pentevo/rom/src/obj/ts-bios.bin
