Unreal: fixed timings in DDCB/FDCB prefixed instructions and int handling timings; paper start replaced with int start

--- a/pentevo/unreal/Unreal/Unreal.rc
+++ b/pentevo/unreal/Unreal/Unreal.rc
@@ -308,17 +308,17 @@ FONT 8, "MS Sans Serif", 0, 0, 1
     AUTOCHECKBOX    "&Autofire", IDC_AUTOFIRE, 85, 96, 38, 10, 0, WS_EX_LEFT
     COMBOBOX        IDC_FIREKEY, 126, 95, 41, 127, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST, WS_EX_LEFT
     EDITTEXT        IDE_FIRERATE, 169, 96, 22, 12, ES_AUTOHSCROLL | ES_NUMBER, WS_EX_LEFT
-    CONTROL         "Spin1", IDC_SPIN1, UPDOWN_CLASS, UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_AUTOBUDDY | UDS_SETBUDDYINT, 181, 92, 11, 14, WS_EX_LEFT
+    CONTROL         "Spin1", IDC_SPIN1, UPDOWN_CLASS, UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_AUTOBUDDY | UDS_SETBUDDYINT, 179, 96, 11, 14, WS_EX_LEFT
     GROUPBOX        "Clipboard pasting delays", IDC_STATIC, 7, 108, 184, 26, 0, WS_EX_LEFT
     LTEXT           "&Hold", IDC_STATIC, 14, 119, 21, 8, SS_LEFT, WS_EX_LEFT
     EDITTEXT        IDE_HOLD_DELAY, 35, 117, 25, 12, ES_AUTOHSCROLL | ES_NUMBER, WS_EX_LEFT
-    CONTROL         "", IDC_SPIN2, UPDOWN_CLASS, UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_AUTOBUDDY | UDS_SETBUDDYINT, 49, 118, 11, 14, WS_EX_LEFT
+    CONTROL         "", IDC_SPIN2, UPDOWN_CLASS, UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_AUTOBUDDY | UDS_SETBUDDYINT, 49, 117, 11, 14, WS_EX_LEFT
     LTEXT           "&Release", IDC_STATIC, 64, 119, 30, 8, SS_LEFT, WS_EX_LEFT
     EDITTEXT        IDE_RELEASE_DELAY, 96, 117, 25, 12, ES_AUTOHSCROLL | ES_NUMBER, WS_EX_LEFT
-    CONTROL         "", IDC_SPIN3, UPDOWN_CLASS, UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_AUTOBUDDY | UDS_SETBUDDYINT, 110, 118, 11, 14, WS_EX_LEFT
+    CONTROL         "", IDC_SPIN3, UPDOWN_CLASS, UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_AUTOBUDDY | UDS_SETBUDDYINT, 109, 117, 11, 14, WS_EX_LEFT
     LTEXT           "&New line", IDC_STATIC, 127, 119, 30, 8, SS_LEFT, WS_EX_LEFT
     EDITTEXT        IDE_NEWLINE_DELAY, 160, 117, 25, 12, ES_AUTOHSCROLL | ES_NUMBER, WS_EX_LEFT
-    CONTROL         "", IDC_SPIN4, UPDOWN_CLASS, UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_AUTOBUDDY | UDS_SETBUDDYINT, 174, 114, 11, 14, WS_EX_LEFT
+    CONTROL         "", IDC_SPIN4, UPDOWN_CLASS, UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_AUTOBUDDY | UDS_SETBUDDYINT, 173, 117, 11, 14, WS_EX_LEFT
     LTEXT           "Mo&dem", IDC_STATIC, 7, 140, 26, 8, SS_LEFT, WS_EX_LEFT
     COMBOBOX        IDC_MODEM, 37, 138, 154, 80, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST, WS_EX_LEFT
 }
@@ -392,13 +392,13 @@ FONT 8, "MS Sans Serif", 0, 0, 1
     AUTORADIOBUTTON "&Single file ROM image", IDC_SINGLE_ROM, 14, 61, 86, 9, WS_TABSTOP, WS_EX_LEFT
     AUTORADIOBUTTON "Custom &ROMSET", IDC_CUSTOM_ROM, 14, 90, 69, 9, WS_TABSTOP, WS_EX_LEFT
     RTEXT           "Loaded ROM size: 64K", IDC_TOTAL_ROM, 106, 62, 87, 8, NOT WS_VISIBLE | SS_RIGHT, WS_EX_LEFT
-    EDITTEXT        IDE_BIGROM, 14, 72, 165, 13, ES_AUTOHSCROLL | ES_READONLY, WS_EX_LEFT
-    CONTROL         "", IDC_FILEBANK, UPDOWN_CLASS, UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_AUTOBUDDY, 167, 72, 11, 13, WS_EX_LEFT
+    EDITTEXT        IDE_BIGROM, 14, 72, 163, 13, ES_AUTOHSCROLL | ES_READONLY, WS_EX_LEFT
+    CONTROL         "", IDC_FILEBANK, UPDOWN_CLASS, UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_AUTOBUDDY, 165, 72, 11, 13, WS_EX_LEFT
     PUSHBUTTON      "...", IDB_ROMSEL_S, 181, 72, 14, 12, 0, WS_EX_LEFT
     COMBOBOX        IDC_ROMSET, 87, 87, 108, 81, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST, WS_EX_LEFT
     COMBOBOX        IDC_ROMPAGE, 14, 103, 70, 80, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST, WS_EX_LEFT
-    EDITTEXT        IDE_ROMNAME, 87, 103, 91, 13, ES_AUTOHSCROLL | ES_READONLY, WS_EX_LEFT
-    CONTROL         "Spin2", IDC_FILEPAGE, UPDOWN_CLASS, UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_AUTOBUDDY, 167, 103, 11, 13, WS_EX_LEFT
+    EDITTEXT        IDE_ROMNAME, 87, 103, 90, 13, ES_AUTOHSCROLL | ES_READONLY, WS_EX_LEFT
+    CONTROL         "Spin2", IDC_FILEPAGE, UPDOWN_CLASS, UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_AUTOBUDDY, 165, 103, 11, 13, WS_EX_LEFT
     PUSHBUTTON      "...", IDB_ROMSEL_P, 181, 103, 14, 12, 0, WS_EX_LEFT
     LTEXT           "Cache size:", IDC_STATIC, 7, 124, 40, 8, SS_LEFT, WS_EX_LEFT
     AUTORADIOBUTTON "&none", IDC_CACHE0, 55, 124, 29, 9, WS_GROUP | WS_TABSTOP, WS_EX_LEFT
@@ -483,7 +483,7 @@ IDD_TAPE DIALOG 0, 0, 210, 135
 STYLE DS_3DLOOK | DS_SETFONT | WS_BORDER | WS_CHILDWINDOW
 FONT 8, "MS Sans Serif"
 {
-    LISTBOX         IDC_TAPE, 7, 7, 194, 107, WS_TABSTOP | WS_VSCROLL | LBS_NOTIFY, WS_EX_LEFT
+    LISTBOX         IDC_TAPE, 7, 7, 194, 98, WS_TABSTOP | WS_VSCROLL | LBS_NOTIFY, WS_EX_LEFT
     LTEXT           "Note: ESC,F3 - load tape, ESC,F7 - start/stop tape", IDC_STATIC, 7, 121, 183, 8, SS_LEFT, WS_EX_LEFT
     AUTOCHECKBOX    "&Tape autostart", IDC_TAPE_AUTOSTART, 7, 108, 67, 10, 0, WS_EX_LEFT
 }
@@ -502,15 +502,15 @@ FONT 8, "MS Sans Serif", 0, 0, 0
     AUTOCHECKBOX    "&4T border", IDC_4TBORDER, 7, 53, 44, 10, 0, WS_EX_LEFT
     AUTOCHECKBOX    "&Unstable data bus", IDC_FLOAT_BUS, 7, 65, 73, 10, 0, WS_EX_LEFT
     AUTOCHECKBOX    "Unstable D&B (in DOS)", IDC_FLOAT_DOS, 7, 78, 85, 10, 0, WS_EX_LEFT
-    LTEXT           "t-states per &int", IDC_STATIC, 79, 27, 47, 8, SS_LEFT, WS_EX_LEFT
+    RTEXT           "t-states per &int", IDC_STATIC, 79, 27, 47, 8, SS_RIGHT, WS_EX_LEFT
     EDITTEXT        IDE_FRAME, 133, 25, 40, 12, ES_AUTOHSCROLL | ES_NUMBER, WS_EX_LEFT
-    LTEXT           "t-states per &line", IDC_STATIC, 76, 40, 51, 8, SS_LEFT, WS_EX_LEFT
+    RTEXT           "t-states per &line", IDC_STATIC, 75, 40, 51, 8, SS_RIGHT, WS_EX_LEFT
     EDITTEXT        IDE_LINE, 133, 38, 40, 12, ES_AUTOHSCROLL | ES_NUMBER, WS_EX_LEFT
-    LTEXT           "start of &paper", IDC_STATIC, 83, 53, 46, 8, SS_LEFT, WS_EX_LEFT
-    EDITTEXT        IDE_PAPER, 133, 51, 40, 12, ES_AUTOHSCROLL | ES_NUMBER, WS_EX_LEFT
-    LTEXT           "i&nt fq", IDC_STATIC, 109, 66, 19, 8, SS_LEFT, WS_EX_LEFT
+    RTEXT           "start of &int", IDC_STATIC, 94, 53, 32, 9, SS_RIGHT, WS_EX_LEFT
+    EDITTEXT        IDE_INTSTART, 133, 51, 40, 12, ES_AUTOHSCROLL | ES_NUMBER, WS_EX_LEFT
+    RTEXT           "i&nt fq", IDC_STATIC, 107, 66, 19, 8, SS_RIGHT, WS_EX_LEFT
     EDITTEXT        IDE_INT, 133, 64, 40, 12, ES_AUTOHSCROLL, WS_EX_LEFT
-    LTEXT           "in&t len", IDC_STATIC, 107, 79, 21, 8, SS_LEFT, WS_EX_LEFT
+    RTEXT           "in&t len", IDC_STATIC, 105, 79, 21, 8, SS_RIGHT, WS_EX_LEFT
     EDITTEXT        IDE_INT_LEN, 133, 77, 40, 12, ES_AUTOHSCROLL, WS_EX_LEFT
     AUTOCHECKBOX    "&Swap A5-A7, A8-A10 on ATM RG0", IDC_ATM_SWAP, 7, 115, 127, 10, 0, WS_EX_LEFT
     AUTOCHECKBOX    "Use p&alette", IDC_ATMPAL, 7, 102, 52, 10, 0, WS_EX_LEFT
