--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -103,10 +103,10 @@ NewlineDelay=20
 [ULA]
 Frame=71680   ; t-states in frame
 ; Frame=250000   ; t-states in frame	- 14MHz
-Paper=17991   ; t-states before paper
 Line=224      ; t-states in line
 ; Line=784      ; t-states in line	- 14MHz
 int=50        ; int freq
+intstart=12   ; t-states before int
 intlen=32     ; int length in t-states
 EvenM1=0      ; align M1 cycle to even T-state (for scorpion)
 4TBorder=0    ; update border every 4T states (for scorpion)
@@ -117,7 +117,7 @@ PortFF=0      ; enable/disable port FF
 Preset=      ; don't use above settings and load preset
 
 ; PRESET.NAME=FRAME,PAPER,LINE,INT,INTLEN,EvenM1,4TBorder,floatBus,floatDOS,PortFF
-PRESET.PENTAGON=71680,17989,224,50,32,0,0,0,0,0
+PRESET.PENTAGON=71680,12,224,50,32,0,0,0,0,0
 ;PRESET.PENTAGON=143360,17989,224,50,32,0,0,0,0,0
 PRESET.SCORPION=69888,14344,224,50,32,1,1,0,0,1
 PRESET.ATM1_2_3.5MHz=69888,17989,224,50,32,0,0,0,0,1
