WC: bugfix, MOUNTER updated, added IDEslave support.
fixed: incomplete loading of INI file, mounter crashes on error message.

--- a/pentevo/soft/WC/exe/WC/wc.ini
+++ b/pentevo/soft/WC/exe/WC/wc.ini
@@ -19,15 +19,15 @@ TAPM    .WMF
 PLASMATW.WMF;SCRSAVER.WMF
 
 [LPANEL]
-DRV=1; 0-IDEnemo, 1-SDzc, 2-SDngs
+DRV=1; 0-IDEnemoMaster, 1-SDzc, 2-SDngs, 3-IDEsmucMaster, 4-IDEsmucSlave, 5-IDEnemoSlave
 INFO=1; file info (0 - disable, 1 - enable)
 CSORT=2; sorting (0 - off, 1 - by name, 2 - by ext, 3 - by size)
 
 [RPANEL]
-DRV=1; 0-IDEnemo, 1-SDzc, 2-SDngs
+DRV=1; 0-IDEnemoMaster, 1-SDzc, 2-SDngs, 3-IDEsmucMaster, 4-IDEsmucSlave, 5-IDEnemoSlave
 INFO=1; file info (0 - disable, 1 - enable)
 CSORT=2; sorting (0 - off, 1 - by name, 2 - by ext, 3 - by size)
 
 
 ;this file and all plug-ins must be placed into WC folder (in root dir of Boot-Device)
-;фрээ√щ Їрщы ш тёх яырушэ√ эєцэю ЁрчьхёЄшЄ№ т яряъх WC (т ъюЁэх чруЁєчюўэюую єёЄЁющёЄтр, ъюЄюЁюх т√сшЁрхЄё  т ts-bios'e [SS+F12])
+;данный файл и все плагины нужно разместить в папке WC (в корне загрузочного устройства, которое выбирается в ts-bios'e [SS+F12])
