Unreal: leds support; tape traps gui option added

--- a/pentevo/unreal/Unreal/Unreal.rc
+++ b/pentevo/unreal/Unreal/Unreal.rc
@@ -179,7 +179,7 @@ FONT 8, "MS Sans Serif", 0, 0, 1
 {
     LTEXT           "", 1119, 0, 0, 8, 90, SS_LEFT, WS_EX_LEFT
     AUTOCHECKBOX    "&BASIC only", IDC_PREVIEW_BASIC, 2, 8, 55, 10, 0, WS_EX_LEFT
-    AUTOCHECKBOX    "Show &Erased", IDC_PREVIEW_ERASED, 60, 8, 100, 10, 0, WS_EX_LEFT
+    AUTOCHECKBOX    "Show &Erased", IDC_PREVIEW_ERASED, 60, 8, 68, 10, 0, WS_EX_LEFT
     CONTROL         "", IDC_PREVIEW_BOX, WC_LISTVIEW, WS_VSCROLL | WS_BORDER | LVS_SINGLESEL | LVS_REPORT, 1, 20, 130, 20, WS_EX_LEFT
 }
 
@@ -206,7 +206,7 @@ FONT 8, "MS Sans Serif", 0, 0, 1
 {
     LTEXT           "&Address:", IDC_STATIC, 7, 8, 28, 8, SS_LEFT, WS_EX_LEFT
     EDITTEXT        IDE_ADDRESS, 40, 7, 51, 14, ES_AUTOHSCROLL, WS_EX_LEFT
-    CONTROL         "Spin1", IDC_SPIN, UPDOWN_CLASS, UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_AUTOBUDDY, 83, 7, 11, 14, WS_EX_LEFT
+    CONTROL         "Spin1", IDC_SPIN, UPDOWN_CLASS, UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_AUTOBUDDY, 80, 7, 11, 14, WS_EX_LEFT
     AUTOCHECKBOX    "* 0x&100", IDC_100, 97, 9, 41, 10, 0, WS_EX_LEFT
     LTEXT           "bank #10, offset #1234", IDC_ADDRESS, 141, 10, 100, 8, SS_LEFT, WS_EX_LEFT
     PUSHBUTTON      "&Find Next", IDC_FIND, 251, 28, 66, 14, 0, WS_EX_LEFT
@@ -308,17 +308,17 @@ FONT 8, "MS Sans Serif", 0, 0, 1
     AUTOCHECKBOX    "&Autofire", IDC_AUTOFIRE, 85, 96, 38, 10, 0, WS_EX_LEFT
     COMBOBOX        IDC_FIREKEY, 126, 95, 41, 127, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST, WS_EX_LEFT
     EDITTEXT        IDE_FIRERATE, 169, 96, 22, 12, ES_AUTOHSCROLL | ES_NUMBER, WS_EX_LEFT
-    CONTROL         "Spin1", IDC_SPIN1, UPDOWN_CLASS, UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_AUTOBUDDY | UDS_SETBUDDYINT, 179, 96, 11, 14, WS_EX_LEFT
+    CONTROL         "Spin1", IDC_SPIN1, UPDOWN_CLASS, UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_AUTOBUDDY | UDS_SETBUDDYINT, 180, 96, 11, 14, WS_EX_LEFT
     GROUPBOX        "Clipboard pasting delays", IDC_STATIC, 7, 108, 184, 26, 0, WS_EX_LEFT
     LTEXT           "&Hold", IDC_STATIC, 14, 119, 21, 8, SS_LEFT, WS_EX_LEFT
     EDITTEXT        IDE_HOLD_DELAY, 35, 117, 25, 12, ES_AUTOHSCROLL | ES_NUMBER, WS_EX_LEFT
     CONTROL         "", IDC_SPIN2, UPDOWN_CLASS, UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_AUTOBUDDY | UDS_SETBUDDYINT, 49, 117, 11, 14, WS_EX_LEFT
     LTEXT           "&Release", IDC_STATIC, 64, 119, 30, 8, SS_LEFT, WS_EX_LEFT
     EDITTEXT        IDE_RELEASE_DELAY, 96, 117, 25, 12, ES_AUTOHSCROLL | ES_NUMBER, WS_EX_LEFT
-    CONTROL         "", IDC_SPIN3, UPDOWN_CLASS, UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_AUTOBUDDY | UDS_SETBUDDYINT, 109, 117, 11, 14, WS_EX_LEFT
+    CONTROL         "", IDC_SPIN3, UPDOWN_CLASS, UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_AUTOBUDDY | UDS_SETBUDDYINT, 110, 117, 11, 14, WS_EX_LEFT
     LTEXT           "&New line", IDC_STATIC, 127, 119, 30, 8, SS_LEFT, WS_EX_LEFT
     EDITTEXT        IDE_NEWLINE_DELAY, 160, 117, 25, 12, ES_AUTOHSCROLL | ES_NUMBER, WS_EX_LEFT
-    CONTROL         "", IDC_SPIN4, UPDOWN_CLASS, UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_AUTOBUDDY | UDS_SETBUDDYINT, 173, 117, 11, 14, WS_EX_LEFT
+    CONTROL         "", IDC_SPIN4, UPDOWN_CLASS, UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_AUTOBUDDY | UDS_SETBUDDYINT, 174, 117, 11, 14, WS_EX_LEFT
     LTEXT           "Mo&dem", IDC_STATIC, 7, 140, 26, 8, SS_LEFT, WS_EX_LEFT
     COMBOBOX        IDC_MODEM, 37, 138, 154, 80, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST, WS_EX_LEFT
 }
@@ -394,12 +394,12 @@ FONT 8, "MS Sans Serif", 0, 0, 1
     AUTORADIOBUTTON "Custom &ROMSET", IDC_CUSTOM_ROM, 14, 90, 69, 9, WS_TABSTOP, WS_EX_LEFT
     RTEXT           "Loaded ROM size: 64K", IDC_TOTAL_ROM, 106, 62, 87, 8, NOT WS_VISIBLE | SS_RIGHT, WS_EX_LEFT
     EDITTEXT        IDE_BIGROM, 14, 72, 163, 13, ES_AUTOHSCROLL | ES_READONLY, WS_EX_LEFT
-    CONTROL         "", IDC_FILEBANK, UPDOWN_CLASS, UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_AUTOBUDDY, 165, 72, 11, 13, WS_EX_LEFT
+    CONTROL         "", IDC_FILEBANK, UPDOWN_CLASS, UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_AUTOBUDDY, 166, 72, 11, 13, WS_EX_LEFT
     PUSHBUTTON      "...", IDB_ROMSEL_S, 181, 72, 14, 12, 0, WS_EX_LEFT
     COMBOBOX        IDC_ROMSET, 87, 87, 108, 81, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST, WS_EX_LEFT
     COMBOBOX        IDC_ROMPAGE, 14, 103, 70, 80, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST, WS_EX_LEFT
     EDITTEXT        IDE_ROMNAME, 87, 103, 90, 13, ES_AUTOHSCROLL | ES_READONLY, WS_EX_LEFT
-    CONTROL         "Spin2", IDC_FILEPAGE, UPDOWN_CLASS, UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_AUTOBUDDY, 165, 103, 11, 13, WS_EX_LEFT
+    CONTROL         "Spin2", IDC_FILEPAGE, UPDOWN_CLASS, UDS_ALIGNRIGHT | UDS_ARROWKEYS | UDS_AUTOBUDDY, 166, 103, 11, 13, WS_EX_LEFT
     PUSHBUTTON      "...", IDB_ROMSEL_P, 181, 103, 14, 12, 0, WS_EX_LEFT
     LTEXT           "Cache size:", IDC_STATIC, 7, 124, 40, 8, SS_LEFT, WS_EX_LEFT
     AUTORADIOBUTTON "&none", IDC_CACHE0, 55, 124, 29, 9, WS_GROUP | WS_TABSTOP, WS_EX_LEFT
@@ -483,9 +483,10 @@ IDD_TAPE DIALOG 0, 0, 210, 135
 STYLE DS_3DLOOK | DS_SETFONT | WS_BORDER | WS_CHILDWINDOW
 FONT 8, "MS Sans Serif"
 {
-    LISTBOX         IDC_TAPE, 7, 7, 194, 98, WS_TABSTOP | WS_VSCROLL | LBS_NOTIFY, WS_EX_LEFT
+    LISTBOX         IDC_TAPE, 7, 7, 194, 74, WS_TABSTOP | WS_VSCROLL | LBS_NOTIFY, WS_EX_LEFT
     LTEXT           "Note: ESC,F3 - load tape, ESC,F7 - start/stop tape", IDC_STATIC, 7, 121, 183, 8, SS_LEFT, WS_EX_LEFT
-    AUTOCHECKBOX    "&Tape autostart", IDC_TAPE_AUTOSTART, 7, 108, 67, 10, 0, WS_EX_LEFT
+    AUTOCHECKBOX    "Tape &autostart", IDC_TAPE_AUTOSTART, 7, 108, 66, 8, 0, WS_EX_LEFT
+    AUTOCHECKBOX    "Tape &traps", IDC_TAPE_TRAPS, 106, 108, 54, 8, 0, WS_EX_LEFT
 }
 
 
